--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 	<link rel="stylesheet" href=styles/colorGame.css>
 </head>
 <body>
-	<h1><span id="colorDisplay">RGB</span> COLOR GAME</h1>
+	<h1>GUESS THE<br><span id="colorDisplay">RGB</span> COLOR GAME</h1>
 
-	<div>
+	<div id="stripe">
+		<button id="reset">New Colors?</button>
 		<span id="message"></span>
+		<button id="easyBtn">Easy</button>
+		<button id="hardBtn" class="selected">Hard</button>
 	</div>
 
 	<div id="container">
