added squares for expert mode

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 	<link rel="stylesheet" href=styles/colorGame.css>
 </head>
 <body>
-	<h1>GUESS THE<br><span id="colorDisplay">RGB</span> COLOR GAME</h1>
+	<h1>GUESS THE<br><span id="colorDisplay">RGB</span>COLOR<br>GAME</h1>
 
 	<div id="stripe">
 		<button id="reset">New Colors?</button>
 		<span id="message"></span>
-		<button class="mode">Easy</button>
-		<button class=" mode selected">Hard</button>
+		<button class="mode selected">Easy</button>
+		<button class="mode">Hard</button>
+		<button class="mode">Expert</button>
+		
 	</div>
 
 	<div id="container">
@@ -21,6 +23,10 @@
 		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+
 	</div>  <!-- end of container div -->
 	<script type="text/javascript" src="scripts/main.js"></script>
 </body>
